добавил кнопку show more для магазинов

--- a/css/style.css
+++ b/css/style.css
@@ -3153,6 +3153,40 @@ svg[data-conflict-id].fixed.fixed--prev {
   font-size: 12px;
 }
 
+.product-shop__show-more {
+  position: relative;
+  z-index: 2;
+  min-height: 20px;
+  margin-top: 5px;
+  padding: 2px 10px 3px;
+  font-size: 12px;
+  color: #1b1a1a;
+  background-color: #bfbfbf;
+  border-radius: 10px;
+}
+
+.product-shop__show-more span {
+  font-weight: 700;
+}
+
+.product-shop__dashed-line {
+  position: absolute;
+  left: -15px;
+  right: -15px;
+  width: 100%;
+  transform: translateY(-50%);
+  border-bottom: 1px dashed #212020;
+}
+
+.shops-wrapper {
+  overflow: hidden;
+  transition: all 0.3s ease-in-out;
+}
+
+.shops-wrapper__list {
+
+}
+
 .product-shop__footer-item-value {
   font-weight: 700;
 }
@@ -5057,6 +5091,11 @@ svg[data-conflict-id].fixed.fixed--prev {
 
   .product-shop__footer {
     margin-left: 0;
+    margin-bottom: 10px;
+  }
+
+  .product-shop__show-more {
+    margin-top: -5px;
     margin-bottom: 10px;
   }
 
