--- a/css/style.css
+++ b/css/style.css
@@ -3156,14 +3156,20 @@ svg[data-conflict-id].fixed.fixed--prev {
 }
 
 .product-shops__shop.product-shop--opened {
-  border-bottom: none;
+  border-bottom-color: transparent;
+}
+
+.product-shops__shop.product-shop--visible {
+  padding-bottom: 35px;
 }
 
 .product-shop__show-more {
-  position: relative;
+  position: absolute;
+  top: 100%;
+  transform: translateY(-15px);
   z-index: 2;
+  min-width: 100px;
   min-height: 20px;
-  margin-top: 5px;
   padding: 2px 10px 3px;
   font-size: 12px;
   color: #1b1a1a;
@@ -3183,7 +3189,6 @@ svg[data-conflict-id].fixed.fixed--prev {
   position: absolute;
   left: -15px;
   right: -15px;
-  width: 100%;
   transform: translateY(-50%);
   border-bottom: 1px dashed #212020;
 }
@@ -5083,6 +5088,19 @@ svg[data-conflict-id].fixed.fixed--prev {
     padding: 0 10px;
   }
 
+  .shops-wrapper {
+    margin-left: -10px;
+    margin-right: -10px;
+  }
+
+  .shops-wrapper__list .product-shop {
+    padding: 15px 10px;
+  }
+
+  .shops-wrapper__list .product-shop .discount {
+    right: 0;
+  }
+
   .product-shop .discount {
     right: -10px;
   }
@@ -5104,11 +5122,6 @@ svg[data-conflict-id].fixed.fixed--prev {
 
   .product-shop__footer {
     margin-left: 0;
-    margin-bottom: 10px;
-  }
-
-  .product-shop__show-more {
-    margin-top: -5px;
     margin-bottom: 10px;
   }
 
