updated files and fixed products show more buttons width

--- a/css/style.css
+++ b/css/style.css
@@ -870,6 +870,10 @@ body {
   padding: 15px 0 15px 15px;
 }
 
+.sidebar--nav .sidebar-list__delimiter {
+  padding: 0 0 15px 0;
+}
+
 .sidebar--nav .sidebar-list__link {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -966,6 +970,25 @@ body {
   /* display: none; */
   visibility: hidden;
   margin-right: 10px;
+}
+
+.filter__item[data-filter-item-id="filter_suitable_assembly"] {
+  flex-wrap: wrap;
+}
+
+.filter__item .filter-details {
+  width: 100%;
+  margin-top: 5px;
+  color: #807979;
+}
+
+.filter__item .filter-details--buttons {
+  margin-top: 5px;
+  display: flex;
+}
+
+.filter__item .filter-details--buttons>a:not(:first-child) {
+  margin-left: 5px;
 }
 
 .filter__item:not(.filter__item--disabled):hover {
@@ -1734,7 +1757,7 @@ svg[data-conflict-id].fixed.fixed--prev {
 
 /* .sidebars__right.sidebars__right--hidden .sidebar__btn {
   padding-left: 4px;
-  
+
 } */
 
 .sidebar,
@@ -2132,6 +2155,7 @@ svg[data-conflict-id].fixed.fixed--prev {
   display: grid;
   grid-template-columns: repeat(auto-fill, minmax(270px, 1fr));
   margin: -10px auto;
+  /* was -10px top and bot,  */
 }
 
 .section__products.section__products-assembleges {
@@ -2236,6 +2260,8 @@ svg[data-conflict-id].fixed.fixed--prev {
   width: 100%;
   max-height: 250px;
   height: 100%;
+  grid-column-start: 1;
+  grid-column-end: last;
 }
 
 .message--long {
@@ -2650,7 +2676,7 @@ svg[data-conflict-id].fixed.fixed--prev {
 
 .card .title,
 .static-card .title {
-  width: 100%;
+  width: calc(100% - 20px);
   font-size: 16px;
   color: #f9f9f9;
   min-height: 38.4px;
@@ -3033,7 +3059,9 @@ svg[data-conflict-id].fixed.fixed--prev {
   display: flex;
   font-size: 16px;
   padding-left: 44px;
+  /* 34 */
   padding-right: 10px;
+  /* margin: 0 10px; */
   border-bottom: 1px solid #212020;
   overflow: auto;
 }
@@ -3110,10 +3138,16 @@ svg[data-conflict-id].fixed.fixed--prev {
 }
 
 .product-shop__image-wrapper {
-  position: relative;
-  z-index: 2;
   width: 180px;
   margin: 0 40px;
+  /* display: flex;
+  justify-content: center;
+  flex-shrink: 0; */
+}
+
+.product-shop__image-wrapper a {
+  width: 100%;
+  height: 100%;
   display: flex;
   justify-content: center;
   flex-shrink: 0;
@@ -3136,6 +3170,7 @@ svg[data-conflict-id].fixed.fixed--prev {
   -ms-flex-pack: justify;
   justify-content: space-between;
 
+  flex-grow: 1;
   width: calc(100% - 464px);
 }
 
@@ -3152,8 +3187,8 @@ svg[data-conflict-id].fixed.fixed--prev {
 }
 
 .product-shop__footer {
-/* временно разместили вровень с названием, пока нет описания на цене */
-/*  margin-left: 10px; */
+  /* временно разместили вровень с названием, пока нет описания на цене */
+  /* margin-left: 10px; */
   font-size: 12px;
 }
 
@@ -3165,6 +3200,7 @@ svg[data-conflict-id].fixed.fixed--prev {
 .product-shop__show-more {
   position: relative;
   z-index: 2;
+  width: calc(100% - 464px);
   min-width: 100px;
   min-height: 20px;
   padding: 2px 10px 3px;
@@ -3258,8 +3294,6 @@ svg[data-conflict-id].fixed.fixed--prev {
 }
 
 .product-price {
-  position: relative;
-  z-index: 2;
   width: 204px;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -4299,21 +4333,29 @@ svg[data-conflict-id].fixed.fixed--prev {
 
 .container--full-width {
   max-width: 100%;
+  /* max-width: calc(100vw - (360px * 2)); */
 }
 
-.sidebar-open .container--full-width .main {
+/* .sidebar-open .container--full-width {
+  /* max-width: 100%; * /
+  max-width: calc(100vw - (360px * 2));
+} */
+
+/* .sidebar-open .container--full-width .main {
   max-width: calc(100vw - (360px * 2) - 40px);
   margin: 0 auto;
-}
+} */
 
 .container--full-width .section__header {
   max-width: 1060px;
   margin: 0 auto 20px;
 }
 
-.sidebar-open .container--full-width .section__header {
-  width: calc(100vw - (360px * 2) - 112px);
-}
+
+/* .sidebar-open .container--full-width .section__header {
+  /* width: calc(100vw - (360px * 2) - 112px); * /
+  max-width: min(calc(100% - 92px), 1060px);
+} */
 
 .container--full-width .section__products {
   max-width: 100%;
@@ -4922,10 +4964,6 @@ svg[data-conflict-id].fixed.fixed--prev {
     margin: 0px 20px
   }
 
-  .product-shop__info {
-    width: calc(100% - 424px);
-  }
-
   .footer {
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
@@ -4965,6 +5003,15 @@ svg[data-conflict-id].fixed.fixed--prev {
 
   .header__button--search.expanded .search-bar__wrapper {
     border-bottom: 1px solid #1b1a1a;
+  }
+
+  .sidebar-open .container--full-width {
+    max-width: max(calc(100vw - (370px * 2)), 660px);
+  }
+
+  .sidebar-open .container--full-width .section__header {
+    max-width: max(min(calc(100% - 92px), 1060px), 660px);
+    /*1090 for FHD screen right spacing*/
   }
 
 }
@@ -5140,12 +5187,13 @@ svg[data-conflict-id].fixed.fixed--prev {
     flex-direction: column;
   }
 
-  .product-shop__info {
-    width: 100%;
-  }
-
   .product-shop__image {
     margin-bottom: 10px;
+  }
+
+  .product-shop__info,
+  .product-shop__show-more {
+    width: 100%;
   }
 
   .product-shop__description {
@@ -5364,8 +5412,32 @@ svg[data-conflict-id].fixed.fixed--prev {
     display: flex;
   }
 
+  .section__products {
+    grid-template-columns: repeat(auto-fill, minmax(170px, 1fr));
+    grid-column-gap: 10px;
+    margin: -5px auto;
+  }
+
   .section__product {
     margin: 5px 0 5px 0;
+  }
+
+  .section__product .product__main-part {
+    padding: 0 10px 10px 10px;
+  }
+
+  .section__product .product__title {
+    /* font-size: 14px; */
+  }
+
+  .section__product .product__buttons {
+    max-width: 100%;
+  }
+
+  .section__product .product__buttons .product__price {
+    max-width: calc(100% - 39px);
+    white-space: nowrap;
+    overflow-x: hidden;
   }
 
   .section__message {
@@ -5383,6 +5455,10 @@ svg[data-conflict-id].fixed.fixed--prev {
   }
 
   .product__button--big span:nth-of-type(2) {
+    display: none;
+  }
+
+  .product__buttons .price__value .price_fraction {
     display: none;
   }
 
@@ -6103,7 +6179,7 @@ svg[data-conflict-id].fixed.fixed--prev {
 }
 
 .message-box {
-  margin: 10px auto;
+  margin: 20px auto;
   width: 100%;
   max-width: 950px;
   padding: 20px;
@@ -6117,8 +6193,10 @@ svg[data-conflict-id].fixed.fixed--prev {
 
 .cross {
   position: absolute;
-  right: 13px;
-  top: 9px;
+  /* right: 13px; */
+  right: 20px;
+  /* top: 9px; */
+  top: 20px;
   color: #bfbfbf;
   cursor: pointer;
 }
@@ -6142,7 +6220,7 @@ svg[data-conflict-id].fixed.fixed--prev {
 .message-box .image .main-icon {
   height: 200px;
   width: 200px;
-  margin: 0 auto;
+  margin: 20px auto;
   display: block;
 }
 
@@ -6308,7 +6386,7 @@ svg[data-conflict-id].fixed.fixed--prev {
 }
 
 /* =============================
-    sort 
+    sort
    ============================= */
 .mobile-sort {
   display: none;
@@ -6890,11 +6968,11 @@ svg[data-conflict-id].fixed.fixed--prev {
 /* .hint-hg-block.hint-important .button {
     filter: url(#white);
   }
-  
+
   .hint-hg-block .button:hover {
     filter: url(#hover);
   }
-  
+
   .hint-hg-block.hint-important .button:hover {
     filter: url(#white) url(#peach);
   } */
@@ -6904,4 +6982,23 @@ svg[data-conflict-id].fixed.fixed--prev {
 
 details summary h3 {
   display: inline;
+}
+
+.button__small {
+  display: inline-block;
+  line-height: 20px;
+  min-width: 20px;
+  height: 20px;
+  padding: 0 5px;
+  border-radius: 10px;
+  background-color: #bfbfbf;
+  color: #000;
+}
+
+.button__small:hover {
+  background-color: #f9f9f9;
+}
+
+.button__small.red {
+  background-color: #da0b29;
 }
