--- a/css/style.css
+++ b/css/style.css
@@ -531,6 +531,7 @@ body {
   z-index: 10;
   top: 0;
   right: 0px;
+  transition: all 0.2s linear;
 }
 
 .discount div {
@@ -548,6 +549,8 @@ body {
   font-family: 'Verdana', sans-serif;
   font-size: 16px;
   font-weight: 700;
+
+  transition: all 0.2s linear;
 }
 
 .header {
@@ -4121,10 +4124,6 @@ svg[data-conflict-id].fixed.fixed--prev {
   padding-bottom: 15px;
 } */
 
-.assemblage-parts .product--collapsed .product__title {
-  padding-right: 40px;
-}
-
 .assemblage-parts .product__title .product__title-block,
 .assemblage-parts .product__title .product__short-description {
   overflow: hidden;
@@ -4132,18 +4131,23 @@ svg[data-conflict-id].fixed.fixed--prev {
   text-overflow: ellipsis;
 }
 
-.assemblage-parts .product--collapsed .product__title .product__link {
-  height: 45px;
-  width: 65%;
-  -o-text-overflow: ellipsis;
-  text-overflow: ellipsis;
-  white-space: nowrap;
-  display: flex;
-  align-items: center;
+.assemblage-parts .product__title .product__title-block {
+  transition: transform 0.2s linear;
+}
+
+.assemblage-parts .product__title .product__short-description {
+  margin-top: -5px;
+  font-weight: 400;
+  font-size: 11px;
+  line-height: 25px;
+  color: #807979;
+  opacity: 1;
+  transition: opacity 0.2s linear, transform 0.2s linear;
 }
 
 .assemblage-parts :not(.product--collapsed) .product__title .product__link .product__short-description {
-  display: none;
+  opacity: 0;
+  transform: translateY(10px);
 }
 
 .assemblage-parts .product--collapsed .product__title .product__link .product__short-description {
@@ -4158,56 +4162,71 @@ svg[data-conflict-id].fixed.fixed--prev {
   max-width: calc(100% - 70px);
 }
 
+.assemblage-parts :not(.product--collapsed) .product__title .product__title-block {
+  transform: translateY(10px);
+}
 
 
 .assemblage-parts .product--collapsed .product__title .icon--arrow {
-  -webkit-transform: rotate(0);
-  -ms-transform: rotate(0);
-  transform: rotate(0);
+  -webkit-transform: none;
+  -ms-transform: none;
+  transform: none;
 }
 
-.assemblage-parts .product--collapsed .product__wrapper {
-  height: 30px;
-  margin-top: -40px;
+.assemblage-parts .product--collapsed .product__title {
+  position: relative;
+  display: flex;
+  padding-right: 30px;
 }
 
-.assemblage-parts .product--collapsed .product__image-wrapper {
-  display: none;
+.assemblage-parts .product--collapsed .product__title .product__price-and-buttons {
+  flex-shrink: 0;
+  animation: appearing 0.3s ease-in-out;
+  pointer-events: all;
+  min-height: 30px;
 }
 
-.assemblage-parts .product--collapsed .product__main-part {
-  padding-right: 28px;
+@keyframes appearing {
+  from {
+    opacity: 0;
+    transform: translateX(7px);
+  } to {
+    opacity: 1;
+    transform: none;
+  }
 }
 
-.assemblage-parts .product--collapsed .product__button {
+.assemblage-parts .product__wrapper-cover {
+  overflow: hidden;
+  will-change: height;
+  height: 0;
+  transform: translateZ(0);
+  transition: height 0.2s linear;
+}
+
+.assemblage-parts .product--collapsed .product__title .product__button {
   background-color: transparent;
 }
 
-.assemblage-parts .product--collapsed .product__button:hover .svg-icon {
+.assemblage-parts .product--collapsed .product__title .product__button:hover .svg-icon {
   -webkit-filter: url(#white) url(#f9f9f9);
   filter: url(#white) url(#f9f9f9);
 }
 
-.assemblage-parts .product--collapsed .product__button--big {
+.assemblage-parts .product--collapsed .product__title .product__button--big {
   width: 25px;
 }
 
-.assemblage-parts .product--collapsed .product__button .svg-icon {
+.assemblage-parts .product--collapsed .product__title .product__button .svg-icon {
   -ms-flex-negative: 0;
   flex-shrink: 0;
   -webkit-filter: url(#white) url(#grey);
   filter: url(#white) url(#grey);
 }
 
-.assemblage-parts .product--collapsed .product__button span {
+.assemblage-parts .product--collapsed .product__title .product__button span {
   overflow: hidden;
-}
-
-.assemblage-parts .product--collapsed .product__price-and-buttons {
-  -webkit-box-pack: end;
-  -ms-flex-pack: end;
-  justify-content: flex-end;
-  align-items: unset;
+  font-size: 0;
 }
 
 /* .assemblage-parts .product--collapsed .product__price {
@@ -4238,6 +4257,7 @@ svg[data-conflict-id].fixed.fixed--prev {
   overflow: hidden;
   /* display: inline-block; */
   width: 100%;
+  min-height: 45px;
   line-height: 25px;
   padding-right: 20px;
   position: relative;
@@ -4265,18 +4285,15 @@ svg[data-conflict-id].fixed.fixed--prev {
           transform: translateY(-50%) rotate(180deg); */
 }
 
-.assemblage-parts .product--collapsed .product__buttons {
-  margin-left: unset;
-}
-
 .assemblage-parts .product__title .icon--arrow {
+  flex-shrink: 0;
   width: 10px;
   height: 9px;
-  background-image: url(../img/filter/filter__arrow.svg);
-  right: 5px;
+  background-image: url("../img/filer/filter__arrow.svg");
   display: block;
   margin: 15px;
-  transform: rotate(180deg);
+  transform: scaleY(-1);
+  transition: transform 0.3s ease;
 }
 
 .assemblage-parts .product__image-wrapper {
@@ -5013,7 +5030,6 @@ svg[data-conflict-id].fixed.fixed--prev {
     max-width: max(min(calc(100% - 92px), 1060px), 660px);
     /*1090 for FHD screen right spacing*/
   }
-
 }
 
 @media (max-width: 768px) {
@@ -5244,24 +5260,28 @@ svg[data-conflict-id].fixed.fixed--prev {
     display: none;
   }
 
-  .assemblage-parts .product:not(.product--collapsed) {
+  .assemblage-parts .product {
     max-height: 100%;
-  }
-
-  .assemblage-parts .product:not(.product--collapsed) .discount+.product__title .product__link:before {
-    content: '';
-    width: 60px;
-    height: 70px;
-    display: block;
-    float: right;
+    min-height: 110px;
   }
 
   .assemblage-parts .product:not(.product--collapsed) .product__title {
     padding-right: 0;
   }
 
-  .assemblage-parts .product:not(.product--collapsed) .product__link {
+  @keyframes appearing {
+    from {
+      opacity: 0;
+      transform: translateY(7px);
+    } to {
+      opacity: 1;
+      transform: none;
+    }
+  }
+
+  .assemblage-parts .product .product__link {
     padding-bottom: 15px;
+    padding-right: 50px;
   }
 
   .assemblage-parts .product:not(.product--collapsed) .product__title .icon--arrow {
@@ -5274,40 +5294,38 @@ svg[data-conflict-id].fixed.fixed--prev {
 
   }
 
-  .assemblage-parts .product:not(.product--collapsed) .product__wrapper {
+  .assemblage-parts .product--collapsed .product__title {
+    flex-direction: column;
+    align-items: center;
+    padding-right: 0;
+  }
+
+  .assemblage-parts .product--collapsed .product__wrapper-cover {
+    height: 0;
+  }
+
+  .assemblage-parts .product .product__wrapper {
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
     -ms-flex-direction: column;
     flex-direction: column;
-    max-height: 100%;
-    height: 100%;
     -webkit-box-align: center;
     -ms-flex-align: center;
     align-items: center;
+
+    height: unset;
+    min-height: unset;
+    max-height: unset;
   }
 
-  .assemblage-parts .product:not(.product--collapsed) .product__image-wrapper {
+  .assemblage-parts .product .product__image-wrapper {
     max-width: 100%;
     width: 100%;
   }
 
-  .assemblage-parts .product:not(.product--collapsed) .product__hidden-description {
+  .assemblage-parts .product .product__hidden-description {
     -webkit-mask-image: none;
     mask-image: none;
-  }
-
-  .assemblage-parts .product--collapsed .product__wrapper {
-    margin-top: 10px;
-  }
-
-  .assemblage-parts .product--collapsed .product__title .product__link {
-    width: 100%;
-  }
-
-  .assemblage-parts .product--collapsed .product__price-and-buttons {
-    -webkit-box-pack: center;
-    -ms-flex-pack: center;
-    justify-content: center;
   }
 
   /* SORT */
@@ -5336,14 +5354,6 @@ svg[data-conflict-id].fixed.fixed--prev {
 
   .product-rating__label {
     display: none;
-  }
-
-  .assemblage-parts .product--collapsed .product__title {
-    padding-right: 0px;
-  }
-
-  .assemblage-parts .product__title .product__link {
-    padding-right: 0px;
   }
 
   /* SORT */
