--- a/css/style.css
+++ b/css/style.css
@@ -680,6 +680,7 @@ body {
   font-family: 'MyriadPro';
   color: #f9f9f9;
   font-size: 16px;
+  min-width: 119px;
 }
 
 .logo-header__title {
@@ -6516,6 +6517,7 @@ svg[data-conflict-id].fixed.fixed--prev {
 
 .section__header-icons {
   padding-left: 11px;
+  min-width: 55px;
   display: flex;
 }
 
