--- a/css/style.css
+++ b/css/style.css
@@ -6725,6 +6725,7 @@ svg[data-conflict-id].fixed.fixed--prev {
   display: flex;
   align-items: center;
   overflow: hidden;
+  max-width: 0;
   transition: all .3s;
 }
 
