min height for assemblage info

--- a/css/style.css
+++ b/css/style.css
@@ -3957,6 +3957,7 @@ svg[data-conflict-id].fixed.fixed--prev {
 /* ========================== */
 /* asssemblage about start */
 .assemblage__about {
+  min-height: 167px;
   margin: 20px 10px;
   padding: 10px;
   border: 1px solid #212020;
@@ -4086,6 +4087,8 @@ svg[data-conflict-id].fixed.fixed--prev {
   padding-top: 25px;
   color: #f9f9f9;
   margin-top: -25px;
+
+  min-height: 183px;
 }
 
 .assemblage-info__block {
